add GitHub link for my profile and minor changes.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <!Doctype html>
 <html>
   <head>
-    <link href="css/bootstrap.css"  rel="stylesheet"  type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet"  type="text/css">
     <link href="css/styles.css" rel="stylesheet"  type="text.css">
     <title>Portfolio</title>
-    <h1>Portfolio</h1>
-    <h6>Michael Petersen</h6>
   </head>
   <body>
-    <img src="img/P6160032.jpg">
-    <h1></h1>
+    <div>
+      <header id="main-header"  type="normal"  class="">
+        <a href="https://github.com/MPetersen89"  aria-label="Github" target="_blank" title="Check out my Github!"  class="">GitHub</a>
+        <img src="img/P6160032.jpg">
+        <h1 id="portfolio">Portfolio</h1>
+        <h6 class="subtext">Michael Petersen</h6>
+      </header>
+    </div>
+      <h3>Projects</h3>
+        <h4></h4>
   </body>
 </html>
