create sections for necessary information and gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
         <h6 class="subtext">Michael Petersen</h6>
       </header>
     </div>
+    <div  class="projects">
       <h3>Projects</h3>
         <h4></h4>
+    </div>
+    <div  class="about">
+
+    </div>
+    <div  class="background">
+
+    </div>
+    <div  class="interests">
+      
+    </div>
   </body>
 </html>
