add gh links to all projects.

--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet"  type="text/css">
     <link href="css/styles.css" rel="stylesheet"  type="text.css">
-    <title>Portfolio</title>
+    <title  id="title">Portfolio</title>
   </head>
   <body>
     <div>
       <header id="main-header"  type="normal"  class="">
         <a href="https://github.com/MPetersen89"  aria-label="Github" target="_blank" title="Check out my Github!"  class="">GitHub</a>
-        <img src="img/P6160032.jpg">
         <h1 id="portfolio">Portfolio</h1>
         <h6 class="subtext">Michael Petersen</h6>
+        <img src="img/P6160032.jpg">
       </header>
     </div>
-    <div  class="projects">
-      <h3>Projects</h3>
-        <h4></h4>
+    <div>
+      <h3 class="header">Projects</h3>
+        <a  href="https://github.com/MPetersen89/hello-world" title="Hello World project on Github" class="projects">Hello World</a>
+        <a  href="https://github.com/MPetersen89/Cookie-Recipe" title="Cookie Recipe project on GitHub" class="projects">Cookie Recipe</a>
+        <a href="https://github.com/MPetersen89/Resort-Website" title="Resort Website project on GitHub"  class="projects">Resort Website</a>
+        <a  href="https://github.com/MPetersen89/Favorite-Band" title="Favorite Band project on GitHub" class="projects">Favorite Band</a>
+        <a  href="https://github.com/MPetersen89/Animal-Shelter"  title="Animal Shelter project on GitHub"  class="projects">Animal Shelter</a>
+        <a  href="https://github.com/MPetersen89/week-in-review"  title="Week In Review project on GitHub"  class="projects">Week In Review</a>
     </div>
     <div  class="about">
-
-    </div>
-    <div  class="background">
-
-    </div>
-    <div  class="interests">
-      
+      <h3>About Me</h3>
+      <div  class="background"></div>
+      <div  class="interests"></div>
+      <div  class="hobbies"></div>
+      <div  class="skills"></div>
     </div>
   </body>
 </html>
