add information and links to interests, hobbies, skills sections.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <header id="main-header"  type="normal"  class="">
-        <a href="https://github.com/MPetersen89"  aria-label="Github" target="_blank" title="Check out my Github!"  class="">GitHub</a>
+        <a href="https://github.com/MPetersen89"  aria-label="Github" target="_blank" title="Check out my GitHub!"  class="">GitHub</a>
         <h1 id="portfolio">Portfolio</h1>
         <h6 class="subtext">Michael Petersen</h6>
         <img src="img/P6160032.jpg">
@@ -17,19 +17,47 @@
     </div>
     <div>
       <h3 class="header">Projects</h3>
-        <a  href="https://github.com/MPetersen89/hello-world" title="Hello World project on Github" class="projects">Hello World</a>
-        <a  href="https://github.com/MPetersen89/Cookie-Recipe" title="Cookie Recipe project on GitHub" class="projects">Cookie Recipe</a>
-        <a href="https://github.com/MPetersen89/Resort-Website" title="Resort Website project on GitHub"  class="projects">Resort Website</a>
-        <a  href="https://github.com/MPetersen89/Favorite-Band" title="Favorite Band project on GitHub" class="projects">Favorite Band</a>
-        <a  href="https://github.com/MPetersen89/Animal-Shelter"  title="Animal Shelter project on GitHub"  class="projects">Animal Shelter</a>
-        <a  href="https://github.com/MPetersen89/week-in-review"  title="Week In Review project on GitHub"  class="projects">Week In Review</a>
+        <h4><a  href="https://github.com/MPetersen89/hello-world" title="Hello World project on Github" class="projects">Hello World</a></h4>
+        <h4><a  href="https://github.com/MPetersen89/Cookie-Recipe" title="Cookie Recipe project on GitHub" class="projects">Cookie Recipe</a></h4>
+        <h4><a href="https://github.com/MPetersen89/Resort-Website" title="Resort Website project on GitHub"  class="projects">Resort Website</a></h4>
+        <h4><a  href="https://github.com/MPetersen89/Favorite-Band" title="Favorite Band project on GitHub" class="projects">Favorite Band</a></h4>
+        <h4><a  href="https://github.com/MPetersen89/Animal-Shelter"  title="Animal Shelter project on GitHub"  class="projects">Animal Shelter</a></h4>
+        <h4><a  href="https://github.com/MPetersen89/week-in-review"  title="Week In Review project on GitHub"  class="projects">Week In Review</a></h4>
     </div>
     <div  class="about">
       <h3>About Me</h3>
-      <div  class="background"></div>
-      <div  class="interests"></div>
-      <div  class="hobbies"></div>
-      <div  class="skills"></div>
+      <div  class="background">
+        <h5>I was born and raised in Overland Park, KS (suburb of Kansas City) and have always been very interested in computers and tech in general. However, the extent of my computer knowledge was limited to building computers and playing videogames until very recently. This coding bootcamp through <a  href="epicodus.com">Epicodus</a> is my attempt at breaking more into tech and potentially making it my career. Through school I studied kinesiology and physical therapy, though I have always had an interest in computers and technology.</h5>
+      </div>
+        <div  class="interests">
+          <h4>Interests</h4>
+            <ul>
+              <li>Technology</li>
+              <li>Videogames</li>
+              <li>Movies</li>
+              <li>Biomechanics</li>
+              <li>Fitness</li>
+              <li>Adventure</li>
+              <li>Helping people</li>
+            </ul>
+        </div>
+      <div  class="hobbies">
+        <h4>Hobbies</h4>
+          <ul>
+            <li>Cooking (meal prep)</li>
+            <li>Videogames</li>
+            <li>Watching The Office nonstop until Netflix <a  href="https://twitter.com/netflix/status/1143643776637792257?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1143643776637792257%7Ctwgr%5E&ref_url=https%3A%2F%2Ftime.com%2F5614266%2Foffice-netflix-nbc-universal%2F"> takes it down next year</a></li>
+          </ul>
+      </div>
+      <div  class="skills">
+        <h4>Skills</h4>
+        <a  href="https://www.youtube.com/watch?v=XsiiIa6bs9I">Girls only like guys who have great skills</a>
+        <ul>
+          <li>Nunchuck skills</li>
+          <li>Bow hunting skills</li>
+          <li>Computer hacking skills</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
