resize img and add more information to about me section.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://github.com/MPetersen89"  aria-label="Github" target="_blank" title="Check out my GitHub!"  class="">GitHub</a>
         <h1 id="portfolio">Portfolio</h1>
         <h6 class="subtext">Michael Petersen</h6>
-        <img src="img/P6160032.jpg">
+        <img src="img/P6160032.jpg" width="auto"  height="400px">
       </header>
     </div>
     <div>
@@ -27,7 +27,13 @@
     <div  class="about">
       <h3>About Me</h3>
       <div  class="background">
-        <h5>I was born and raised in Overland Park, KS (suburb of Kansas City) and have always been very interested in computers and tech in general. However, the extent of my computer knowledge was limited to building computers and playing videogames until very recently. This coding bootcamp through <a  href="epicodus.com">Epicodus</a> is my attempt at breaking more into tech and potentially making it my career. Through school I studied kinesiology and physical therapy, though I have always had an interest in computers and technology.</h5>
+        <p>I was born and raised in Overland Park, KS (suburb of Kansas City) and have always been very interested in computers and tech in general. However, the extent of my computer knowledge was limited to building computers and playing videogames until very recently. Through school I studied kinesiology and physical therapy, though I have always had an interest in computers and technology. I have had a variety of jobs, including dental assistant, barista, white water rafting and backpacking guide, and physical therapist assistant. I see coding as the future of the tech industry and recognize that without at least a baseline knowledge of it, I will forever be behind the times in most businesses.This coding bootcamp through <a  href="epicodus.com">Epicodus</a> is my attempt at breaking more into tech and potentially making it my career. Through it, I hope to learn:
+        <h6><ol>
+          <li>How to make a basic website and program</li>
+          <li>Basic programming skills that could land a job at a tech company</li>
+          <li>How to find the information necessary to continue learning</li>
+        </ol></h6>
+        </p>
       </div>
         <div  class="interests">
           <h4>Interests</h4>
@@ -47,6 +53,7 @@
             <li>Cooking (meal prep)</li>
             <li>Videogames</li>
             <li>Watching The Office nonstop until Netflix <a  href="https://twitter.com/netflix/status/1143643776637792257?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1143643776637792257%7Ctwgr%5E&ref_url=https%3A%2F%2Ftime.com%2F5614266%2Foffice-netflix-nbc-universal%2F"> takes it down next year</a></li>
+            <li>Learning</li>
           </ul>
       </div>
       <div  class="skills">
