provide descriptions of all project links and begin styling project with CSS and bootstrap.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   </head>
   <body>
     <div>
-      <header id="main-header"  type="normal"  class="">
-        <a href="https://github.com/MPetersen89"  aria-label="Github" target="_blank" title="Check out my GitHub!"  class="">GitHub</a>
+      <header id="main-header"  type="normal">
+        <a href="https://github.com/MPetersen89"  aria-label="Github" target="_blank" title="Check out my GitHub!"  id="github">GitHub</a>
+        <div  class="flex-grow"></div>
         <h1 id="name">Michael Petersen</h1>
         <h2 id="portfolio">
           <strong>Portfolio</strong>
         </h2>
+        <div  class="flex-grow"></div>
         <img src="img/P6160032.jpg" class="img">
+        <div  class="flex-grow"></div>
       </header>
     </div>
     <div>
@@ -22,11 +25,17 @@
         <strong>Projects</strong>
       </h3>
         <h4><a  href="https://github.com/MPetersen89/hello-world" title="Hello World project on Github" class="projects">Hello World</a></h4>
+        <p>My first project, and probably yours too. Uses only HTML.</p>
         <h4><a  href="https://github.com/MPetersen89/Cookie-Recipe" title="Cookie Recipe project on GitHub" class="projects">Cookie Recipe</a></h4>
+        <p>A basic project on how to bake chocolate chip cookies. Includes HTML and Markdown.</p>
         <h4><a href="https://github.com/MPetersen89/Resort-Website" title="Resort Website project on GitHub"  class="projects">Resort Website</a></h4>
+        <p>Simple project promoting a resort. Includes HTML, Markdown, and CSS.</p>
         <h4><a  href="https://github.com/MPetersen89/Favorite-Band" title="Favorite Band project on GitHub" class="projects">Favorite Band</a></h4>
+        <p>Project containing information, pictures, and tour dates of a band. Uses HTML, Markdown, and CSS.</p>
         <h4><a  href="https://github.com/MPetersen89/Animal-Shelter"  title="Animal Shelter project on GitHub"  class="projects">Animal Shelter</a></h4>
+        <p>Project promoting a fantasy animal shelter. Uses HTML, Markdown, and CSS (specifically Bootstrap).</p>
         <h4><a  href="https://github.com/MPetersen89/week-in-review"  title="Week In Review project on GitHub"  class="projects">Week In Review</a></h4>
+        <p>A review of the first week of Epicodus, showcasing things learned and highlights. Uses HTML, Markdown, and Bootstrap/CSS.</p>
     </div>
     <div  class="about">
       <h3>
@@ -69,6 +78,7 @@
           <li>Nunchuck skills</li>
           <li>Bow hunting skills</li>
           <li>Computer hacking skills</li>
+          <li>Eating meals of only chips and salsa</li>
         </ul>
       </div>
     </div>
