complete README, continue exploring CSS styling.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div  class="flex-grow"></div>
         <h1 id="name">Michael Petersen</h1>
         <div  class="flex-grow"></div>
-        <img src="img/P6160032.jpg" class="img">
+        <img src="img/P6160032.jpg" id="img">
         <div  class="flex-grow"></div>
       </header>
     </div>
