add logos for github and email.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div  class="profile">
       <header id="main-header"  type="normal">
-        <a href="https://github.com/MPetersen89" target="_blank" title="Check out my GitHub!"  id="github">GitHub</a>
+        <img  src="img/GitHub-Mark-32px.png"><a href="https://github.com/MPetersen89" target="_blank" title="Check out my GitHub!"  id="github">GitHub</a>
+        <img  src="img/email.png" id="email-logo"><a href="michael_petersen_email@yahoo.com"  target="_blank" title="Email me!" id="email">Email</a>
         <div  class="flex-grow"></div>
         <h1 id="name">Michael Petersen</h1>
         <div  class="flex-grow"></div>
@@ -84,5 +85,7 @@
         </div>
       </div>
     </div>
+    <div  class="contact"><u>Contact Info</u></div>
+    <p>email: <a href="michael_petersen_email@yahoo.com">michael_petersen_email@yahoo.com</a></p>
   </body>
 </html>
