move contact info and fix email link.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title  id="title">Portfolio</title>
   </head>
   <body>
-    <div  class="profile">
+    <div class="left-column">
       <header id="main-header"  type="normal">
-        <img  src="img/GitHub-Mark-32px.png"><a href="https://github.com/MPetersen89" target="_blank" title="Check out my GitHub!"  id="github">GitHub</a>
-        <img  src="img/email.png" id="email-logo"><a href="michael_petersen_email@yahoo.com"  target="_blank" title="Email me!" id="email">Email</a>
         <div  class="flex-grow"></div>
         <h1 id="name">Michael Petersen</h1>
         <div  class="flex-grow"></div>
@@ -18,10 +16,9 @@
         <div  class="flex-grow"></div>
       </header>
     </div>
-
     <div  class="portfolio">
       <h2 id="portfolio">
-        <strong>Portfolio</strong>
+        <a href="https://mpetersen89.github.io/Portfolio/" target="_blank" title="Current Deployment"><strong>Portfolio</strong></a>
       </h2>
       <h3>
         <strong><u>Projects</u></strong>
@@ -38,19 +35,18 @@
         <p  class="project-description">Project promoting a fantasy animal shelter. Uses HTML, Markdown, and CSS (specifically Bootstrap).</p>
         <h4><a  href="https://github.com/MPetersen89/week-in-review"  title="Week In Review project on GitHub"  class="projects">Week In Review</a></h4>
         <p  class="project-description">A review of the first week of Epicodus, showcasing things learned and highlights. Uses HTML, Markdown, and Bootstrap/CSS.</p>
-    </div>
-    <div  class="about">
-      <h3>
-        <strong><u>About Me</u></strong>
-      </h3>
-      <div  class="background">
-        <p>I was born and raised in Overland Park, KS (suburb of Kansas City) and have always been very interested in computers and tech in general. However, the extent of my computer knowledge was limited to building computers and playing videogames until <em>very</em> recently. Through school I studied kinesiology and physical therapy, though I have always had an interest in computers and technology. I have had a variety of jobs, including dental assistant, barista, white water rafting and backpacking guide, and physical therapist assistant. I see coding as the future of the tech industry and recognize that without at least a baseline knowledge of it, I will forever be behind the times in most businesses.This coding bootcamp through <a  href="epicodus.com">Epicodus</a> is my attempt at breaking more into tech and potentially making it my career. Through it, I hope to learn:
-        <h6><ol>
-          <li>How to make a basic website and program</li>
-          <li>Basic programming skills that could land a job at a tech company</li>
-          <li>How to find the information necessary to continue learning</li>
-        </ol></h6>
-        </p>
+      <div  class="about">
+        <h3>
+          <strong><u>About Me</u></strong>
+        </h3>
+        <div  class="background">
+          <p>I was born and raised in Overland Park, KS (suburb of Kansas City) and have always been very interested in computers and tech in general. However, the extent of my computer knowledge was limited to building computers and playing videogames until <em>very</em> recently. Through school I studied kinesiology and physical therapy, though I have always had an interest in computers and technology. I have had a variety of jobs, including dental assistant, barista, white water rafting and backpacking guide, and physical therapist assistant. I see coding as the future of the tech industry and recognize that without at least a baseline knowledge of it, I will forever be behind the times in most businesses.This coding bootcamp through <a  href="epicodus.com">Epicodus</a> is my attempt at breaking more into tech and potentially making it my career. Through it, I hope to learn:
+          <h6><ol>
+            <li>How to make a basic website and program</li>
+            <li>Basic programming skills that could land a job at a tech company</li>
+            <li>How to find the information necessary to continue learning</li>
+          </ol></h6>
+          </p>
       </div>
         <div  class="interests">
           <h4><u>Interests</u></h4>
@@ -85,7 +81,10 @@
         </div>
       </div>
     </div>
-    <div  class="contact"><u>Contact Info</u></div>
-    <p>email: <a href="michael_petersen_email@yahoo.com">michael_petersen_email@yahoo.com</a></p>
+    <div  class="contact"><u>Contact Info</u>
+      <img  src="img/GitHub-Mark-32px.png"><a href="https://github.com/MPetersen89" target="_blank" title="Check out my GitHub!"  id="github">GitHub</a>
+      <img  src="img/email.png" id="email-logo"><a href="mailto:michael_petersen_email@yahoo.com? subject=subject text"  target="_blank" title="michael_petersen_email@yahoo.com" id="email">Email</a>
+    </div>
+  </div>
   </body>
 </html>
