css style changes to name, header, and portfolio.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title  id="title">Portfolio</title>
   </head>
   <body>
-    <div class="left-column">
+    <div class="column">
       <header id="main-header"  type="normal">
         <div  class="flex-grow"></div>
         <h1 id="name">Michael Petersen</h1>
@@ -21,7 +21,7 @@
         <a href="https://mpetersen89.github.io/Portfolio/" target="_blank" title="Current Deployment"><strong>Portfolio</strong></a>
       </h2>
       <h3>
-        <strong><u>Projects</u></strong>
+        <strong><u>Current Projects</u></strong>
       </h3>
         <h4><a  href="https://github.com/MPetersen89/hello-world" title="Hello World project on Github" class="projects">Hello World</a></h4>
         <p  class="project-description">My first project, and probably yours too. Uses only HTML.</p>
